# azalea

./: .darklua.config.json  Cargo.toml  LICENSE-MIT.txt  README.md  azalea.hexpat  default.nix  flake.nix  package.json  rokit.toml
encoding/: decoder.luau
encoding/__tests__/: MeshPart.spec.luau
encoding/testRbxms/: AndroidRobotMeshPart.rbxm
examples/: .gitignore  attributes_and_tags.bin.zst  fusion-0.3-release.rbxm  graphql-3.10.0-release.rbxm  luau-regexp-0.2.1-release.rbxm  matter-0.8.5-release.rbxm  matter-hooks-0.2.1-release.rbxm  plasma-0.4.4-release.rbxm  react-lua-17-rel.bin.zst  test.bin.zst
scripts/: clean.ts  compareExamples.ts  generate.ts  generateAndCompareExamples.ts  runTests.ts
src/: base122.luau  base122.rs  emit.rs  encoder.rs  lib.rs  main.rs  spec.rs  template.luau
src/luau/: base122.luau  baseCombinator.luau  decoderTemplate.luau  hackZstd.luau  mergedCombinator.luau  minifiedCombinator.luau
src/luau/shims/: LegacyNormalRequire.luau  LegacyNovelRequire.luau  NewModuleScript.luau
templates/: decoder.txt
