[package]
name = "azalea"
version = "0.1.0"
edition = "2024"
authors = ["techs-sus"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/techs-sus/azalea"

[features]
default = ["base122", "cli"]
base122 = []
cli = ["dep:clap", "dep:wild", "dep:darklua", "dep:stylua"]

[lib]
name = "azalea"

[[bin]]
name = "azalea"
required-features = ["base122", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"], optional = true }
wild = { version = "2", optional = true }

darklua = { version = "0.18.0", optional = true }
stylua = { version = "2.4.1", features = ["luau"], optional = true }

color-eyre = { version = "0.6", default-features = false }

rbx_binary = "2.0.1"
rbx_xml = "2.0.1"
rbx_dom_weak = "4.1.0"

zstd = "0.13.3"

leb128 = "=0.2.6"

bitflags = "2.11.1"

askama = "0.16.0"

# speed up backtrace generation on debug builds
[profile.dev.package.backtrace]
opt-level = 3

# full-moon should be compiled with release optimisations in debug mode due to stack overflows
[profile.dev.package.full_moon]
opt-level = 3

# stylua should be compiled with release optimisations in debug mode due to stack overflows
[profile.dev.package.stylua]
opt-level = 3

# debuginfo
[profile.release]
debug = true
